<resources>
    <string name="app_name">FourBrothers</string>
    <string name="enter_your_password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Username</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_supplie">Supplies</string>
    <string name="logout">Logout</string>
    <string name="warning">Warning</string>
    <string name="are_you_sure_to_delete_this_item">Are you sure to logout account?</string>
    <string name="yes_sure">Yes sure!</string>
    <string name="customers">Customers Data</string>
    <string name="buyers">Buyers Data</string>
    <string name="detail">Show Detail</string>
    <string name="total">Total: %1$d</string>
    <string name="total_amount">Total: %1$d</string>
    <string name="total_weight">Total Weight: %.1f <b>Kg</b></string>
    <string name="weight_loss">Weight: %.1f <b>Kg</b></string>
    <string name="edit">Edit\n</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="parties">Parties</string>
    <string name="pager_image">Pager Image</string>
    <string name="rate">Rate: %1$d</string>
    <string name="supply_detail">Supply Detail</string>
    <string name="driver">Driver: %1$s</string>
    <string name="number">Number: %1$s</string>
    <string name="search">Search</string>
    <string name="expenses">Expenses</string>
    <string name="select_date">Select Date</string>
    <string name="image_description">Image description</string>
    <string name="products">Products</string>
    <string name="kachra">Kachra Charbhi</string>
    <string name="setting">Setting</string>
    <string name="add_advance">+ Advance</string>
    <string name="add_kachra_charbhi">+ Kachra Charbhi</string>
    <string name="remaining_balance">Current Balance</string>
    <string name="payments">Payments</string>
    <string name="cash_wasuli">Cash Wasuli</string>
    <string name="employee">Employees</string>
    <string name="current_salary">Current Salary: %1$d</string>
    <string name="payable_salary">Payable Salary: %1$d</string>
    <string name="type">Type: %1$s</string>
    <string name="monthly_payments">Monthly Payments</string>
    <string name="select_month">Select Month</string>
    <string name="save">Save</string>
    <string name="rate_type">Rate Type</string>
    <string name="select_shop">Select Shop</string>
    <string name="select_product">Select Product</string>
    <string name="rates">Rates</string>
    <string name="add_payment">+ Add Payment</string>
</resources>