<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/baseline_shop_24"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_supplies"
            android:icon="@drawable/baseline_view_list_24"
            android:title="@string/menu_supplie" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout" />
    </group>
</menu>