<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".ui.main.ui.employee.EmployeeFragment">
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Media -->
            <FrameLayout
                android:visibility="gone"
                android:clickable="true"
                android:background="@drawable/side_nav_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_90ssp"
                android:scaleType="centerCrop"
                android:focusable="true">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/viewPagerMain"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100sdp"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/imagePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:foreground="?selectableItemBackground"
                    android:src="@drawable/add_image_24"
                    app:tint="@color/black90" />
            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/employee_type"
                    android:text="@string/type"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:id="@+id/current_salary"
                    android:text="@string/current_salary"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:id="@+id/payable_salary"
                    android:text="@string/payable_salary"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:text="@string/monthly_payments"
        android:textSize="@dimen/_13ssp"
        android:layout_marginTop="@dimen/_2sdp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_6sdp"
        android:focusableInTouchMode="false"
        app:endIconCheckable="true"
        app:endIconDrawable="@drawable/baseline_calendar_today_24"
        android:hint="@string/select_month">
        <com.google.android.material.textfield.TextInputEditText
            android:cursorVisible="false"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payments_RV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>