<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:divider="@drawable/divider"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:showDividers="middle"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldProducts"
            android:layout_marginTop="@dimen/_5sdp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:hint="@string/select_product">
            <AutoCompleteTextView
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldRateType"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:hint="@string/rate_type">
                <AutoCompleteTextView
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldRates"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:hint="@string/rates">
                <AutoCompleteTextView
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldSelectParty"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:hint="@string/select_shop">
            <AutoCompleteTextView
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/fieldWeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:hint="Enter Weight">
                <com.google.android.material.textfield.TextInputEditText
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <Space
                android:layout_width="@dimen/_5sdp"
                android:layout_height="match_parent"/>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:id="@+id/fieldAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:layout_weight="1"
                android:hint="Total Amount">
                <com.google.android.material.textfield.TextInputEditText
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>
        <Button
            android:id="@+id/save_btn"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>