<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.home.HomeFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/_5sdp"
        style="@style/Widget.Material3.CardView.Filled">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Title, secondary and supporting text -->
                <TextView
                    android:id="@+id/expense_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining_balance"
                    android:textAppearance="?attr/textAppearanceTitleMedium" />

                <TextView
                    android:id="@+id/balance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/total_amount"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />


            </LinearLayout>
            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:id="@+id/advance_btn"
                    android:text="@string/add_advance"
                    style="?attr/borderlessButtonStyle"
                    />
                <com.google.android.material.button.MaterialButton
                    android:layout_width="wrap_content"
                    android:id="@+id/kachra_btn"
                    android:layout_height="wrap_content"
                    android:text="@string/add_kachra_charbhi"
                    style="?attr/borderlessButtonStyle"
                    />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView"
        app:layout_constraintEnd_toEndOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_1sdp"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/months_picker"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Month:"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:text="May"
                android:id="@+id/selected_month"
                android:layout_marginStart="@dimen/_5sdp"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/year_picker"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Year:"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:text="2024"
                android:id="@+id/selected_year"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/payments_RV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/kachra_payment_item"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>
