<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <FrameLayout
            android:clickable="true"
            android:background="@drawable/side_nav_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100ssp"
            android:scaleType="centerCrop"
            android:focusable="true">
            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPagerMain"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/imagePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/add_image_24" />
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/supplier_name"
                android:text="----"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/supplier_rate"
                android:text="@string/rate"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/supplier_weight"
                android:text="@string/total_weight"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

        </LinearLayout>

        <View
            android:background="@color/black10"
            android:layout_width="wrap_content"
            android:layout_height="1dp"/>

        <LinearLayout
            android:id="@+id/supply_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Supply Bachat"
                android:textAppearance="?attr/textAppearanceTitleMedium" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:id="@+id/total_bachat"
                android:text="@string/total"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary" />

            <LinearLayout
                android:orientation="horizontal"
                android:weightSum="3"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="@dimen/_10ssp"
                    android:text="Supplier Amount"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Supplies Amount"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10ssp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Expenses"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textSize="@dimen/_10ssp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:weightSum="3"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/supplier_amount"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/supplies_amount"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:id="@+id/total_expense"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>